[project]
name = "tennisproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.1.2",
    "scenedetect>=0.6.1",
    "numpy>=1.19.3",
    "scipy>=1.3.1",
    "torch>=1.5.0",
    "torchvision>=0.6.0",
    "pandas>=1.1.5",
    "sympy>=1.9",
    "tqdm>=4.42.1",
    "opencv_python>=4.1.2.30",
    "catboost>=1.1.1",
]
